--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-text-loop": "^2.3.0",
+    "react-text-loop-next": "^0.0.3",
     "react-typical": "^0.1.3",
     "typewriter-effect": "^2.19.0"
   },
