--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "firebase": "^9.10.0",
+    "flickity": "^2.3.0",
     "framer-motion": "^9.0.1",
     "moment": "^2.29.4",
     "next": "12.3.1",
     "next-videos": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-flickity-component": "^4.0.1",
     "react-icons": "^4.4.0",
     "react-text-loop": "^2.3.0",
     "react-text-loop-next": "^0.0.3",
