--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "next": "12.3.1",
     "next-videos": "^1.4.1",
     "react": "18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "18.2.0",
     "react-flickity-component": "^4.0.1",
     "react-icons": "^4.4.0",
-    "react-text-loop": "^2.3.0",
-    "react-text-loop-next": "^0.0.3",
-    "react-typical": "^0.1.3",
+    "swiper": "^9.0.2",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
